# LELEC210X

./: .env  .gitignore  .pre-commit-config.yaml  .prettierignore  .project  FEDORA.md  INSTALL.md  INTEGRATION.md  LICENSE.md  README 2.md  README.md  WORFKLOW.md  admin_panel.py  classifier_pipe.py  leaderboard_app.py  measurements.txt  pyproject 2.toml  pyproject.toml  status  test.csv  test_Audrey_git 3.txt
auth/: README.md  pyproject.toml
auth/src/auth/: __init__.py  __main__.py  classifier_pipe.py  model.pickle  model_prediction.py  packet.py
classification/: README.md  feature_vectors.ipynb  h1_feature_vectors.ipynb  h5a1_toy.ipynb  h5a2_audio.ipynb  h5a3_confidence_and_memory.ipynb  hands_on_classif1_toy.ipynb  hands_on_classif2_audio.ipynb  hands_on_classif3_confidence_and_memory.ipynb  hands_on_feature_vectors.ipynb  hyperparameter_tuning.ipynb  ourClassifier.ipynb  plot_classifier_comparison.py  pyproject.toml  results_RF.csv  results_SVM.csv
classification/Python2C_conversion/: check_melvec_C.ipynb  check_melvec_filterbanks_C.ipynb  check_rfft_CMSIS.ipynb  hardcode_Hamming_window.ipynb  hardcode_audio.ipynb  hardcode_mel_filterbanks.ipynb  hardcode_mel_matrix.ipynb
classification/data/feature_matrices/: feature_matrix_2D.npy  feature_matrix_2D_aug.npy  labels_aug.npy
classification/data/models/: KNNrigolo.pickle  knn_model.pickle  model.pickle  random_forest_model.pickle
classification/figs/: DB.py  melfilterbanks 2.py  melfilterbanks.py
classification/melvecs/birds/: data_aquired_birds_0_2.npy  data_aquired_birds_0_3.npy  data_aquired_birds_0_4.npy  data_aquired_birds_10_0.npy  data_aquired_birds_10_1.npy  data_aquired_birds_10_2.npy  data_aquired_birds_10_3.npy  data_aquired_birds_11_0.npy  data_aquired_birds_11_2.npy  data_aquired_birds_11_3.npy  data_aquired_birds_12_2.npy  data_aquired_birds_12_4.npy  data_aquired_birds_13_1.npy  data_aquired_birds_13_4.npy  data_aquired_birds_14_0.npy  data_aquired_birds_14_2.npy  data_aquired_birds_14_4.npy  data_aquired_birds_15_1.npy  data_aquired_birds_15_2.npy  data_aquired_birds_15_3.npy  data_aquired_birds_15_4.npy  data_aquired_birds_16_0.npy  data_aquired_birds_16_1.npy  data_aquired_birds_16_3.npy  data_aquired_birds_17_1.npy  data_aquired_birds_17_3.npy  data_aquired_birds_17_4.npy  data_aquired_birds_18_3.npy  data_aquired_birds_19_0.npy  data_aquired_birds_19_1.npy  data_aquired_birds_19_4.npy  data_aquired_birds_20_0.npy  data_aquired_birds_20_1.npy  data_aquired_birds_20_2.npy  data_aquired_birds_21_1.npy  data_aquired_birds_21_2.npy  data_aquired_birds_22_0.npy  data_aquired_birds_22_3.npy  data_aquired_birds_23_3.npy  data_aquired_birds_23_4.npy  (+62 more)
classification/melvecs/chainsaw/: data_aquired_chainsaw_10_2.npy  data_aquired_chainsaw_10_3.npy  data_aquired_chainsaw_10_4.npy  data_aquired_chainsaw_11_1.npy  data_aquired_chainsaw_11_3.npy  data_aquired_chainsaw_12_0.npy  data_aquired_chainsaw_13_0.npy  data_aquired_chainsaw_13_2.npy  data_aquired_chainsaw_13_3.npy  data_aquired_chainsaw_14_0.npy  data_aquired_chainsaw_14_1.npy  data_aquired_chainsaw_15_0.npy  data_aquired_chainsaw_15_1.npy  data_aquired_chainsaw_16_0.npy  data_aquired_chainsaw_16_1.npy  data_aquired_chainsaw_16_4.npy  data_aquired_chainsaw_17_0.npy  data_aquired_chainsaw_17_1.npy  data_aquired_chainsaw_17_2.npy  data_aquired_chainsaw_17_4.npy  data_aquired_chainsaw_18_0.npy  data_aquired_chainsaw_18_1.npy  data_aquired_chainsaw_19_0.npy  data_aquired_chainsaw_19_2.npy  data_aquired_chainsaw_19_4.npy  data_aquired_chainsaw_1_3.npy  data_aquired_chainsaw_20_2.npy  data_aquired_chainsaw_21_0.npy  data_aquired_chainsaw_21_2.npy  data_aquired_chainsaw_21_3.npy  data_aquired_chainsaw_22_0.npy  data_aquired_chainsaw_23_0.npy  data_aquired_chainsaw_23_2.npy  data_aquired_chainsaw_24_0.npy  data_aquired_chainsaw_24_1.npy  data_aquired_chainsaw_24_3.npy  data_aquired_chainsaw_25_1.npy  data_aquired_chainsaw_25_3.npy  data_aquired_chainsaw_26_0.npy  data_aquired_chainsaw_26_1.npy  (+43 more)
classification/melvecs/fire/: data_aquired_fire_0_0.npy  (+103 more)
common/: README.md  pyproject.toml
contrib/: README.md  README_old.md  UART_READER.md  pyproject.toml
leaderboard/: .flaskenv  CONTEST.md  README.md  app.py  app.wsgi  commands.py  guess.py  ping.py  play 3.py  play.py  pyproject.toml
leaderboard/backend/: forms.py  models.py
leaderboard/cli/: config.py
leaderboard/routes/: leaderboard.py
leaderboard/templates/: leaderboard.html
mcu/: .project  README.md  pyproject.toml
mcu/hands_on_audio_acquisition/: .cproject  .mxproject  .project  H2b.ioc  basic-uart-reader 3.py  basic-uart-reader.py  hands_on_audio_acquisition.ioc  install_python_dep.bat  plotConso.py  send_prediction.py  uart-reader.py  uart-reader_V2.py  uart-reader_V3.py
mcu/hands_on_feature_vectors/: .cproject  .gitignore  .mxproject  .project  H3b.ioc  STM32L4A6ZGTX_FLASH.ld  STM32L4A6ZGTX_RAM.ld  hands_on_feature_vectors 2.ioc  hands_on_feature_vectors.ioc  uart-reader 3.py  uart-reader.py
mcu/hands_on_main_app/: .cproject  .mxproject  STM32L4A6ZGTX_FLASH 2.ld  STM32L4A6ZGTX_RAM.ld  hands_on_main_app.ioc  uart-reader.py  uart-reader2.py  zmq-reader.py
mcu/hands_on_mcu/: .cproject  .mxproject  .project  H2.ioc  STM32L4A6ZGTX_RAM 2.ld  hands_on_mcu.ioc
mcu/optimization_main_app/: .cproject  .mxproject  .project  STM32L4A6ZGTX_FLASH.ld  STM32L4A6ZGTX_RAM.ld  optimization_main_app.ioc  optimization_main_app.launch
mcu/optimization_prototypes/: makefile  mel_filter_apply.c  mel_filter_bank.h  mel_gen_header.py  mel_opt_test.c  mel_optimizationV3.c  mel_triangles.py  mel_trianglesV3.py  mel_trianglesV4.py  run_c.py
mcu/optimized_main_app_V1/: .project  hands_on_main_app.ioc
mcu/power_plots/: data_24 listing.txt  puissance.py
telecom/: README.md  example_measurements.txt  pyproject.toml  read_file_for_CFO_SNR.py  read_measurements.py  sim_outputs.csv  test.csv
telecom/gr-limesdr/: MANIFEST.md  README.md
telecom/gr-limesdr-3-10/: CMakeLists.txt
telecom/gr-limesdr-3-8/: README.md
telecom/hands_on_simulation/: README.md  chain.py  load_simdata.py  sim.py  sim_utils.py  test.py
(+3834 files in other folders)
