[project]
authors = [
    { name="LELEC210X teaching assistants" }
]
description = "The best project for the best students"
name = "LELEC210X"
readme = "README.md"
version = "0.1.0"
requires-python = ">=3.9"

[tool.rye.workspace]
members = ["auth", "classification", "common", "leaderboard"]

[tool.rye]
dev-dependencies = [
  "pre-commit>=3.5.0",
  "pytest>=7.4.3",
]
managed = true

[tool.poetry.group.auth.dependencies]
click = "^8.1.7"
cryptography = "^41.0.5"
pyserial = "^3.5"
pyzmq = "^25.1.1"

[tool.poetry.group.classification.dependencies]
click = "^8.1.7"
librosa = "^0.10.1"
notebook = "^7.0.4"
scipy = "^1.09"
seaborn = "^0.12.2"
sounddevice = "^0.4.6"
soundfile = "^0.12.1"
tqdm = "^4.66.1"

[tool.poetry.group.common.dependencies]
click = "^8.1.7"
python-dotenv = "^0.21.1"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.4"
pytest = "^7.4.3"
youtube-dl = {git = "https://github.com/ytdl-org/youtube-dl.git"}

[tool.poetry.group.leaderboard.dependencies]
click = "^8.1.7"
eventlet = "^0.33.3"
flask = "^2.2.2"
flask-apscheduler = "^1.12.4"
flask-limiter = "^3.3.0"
flask-restx = "^1.0.6"
flask-socketio = "^5.3.2"
flask-swagger = "^0.2.14"
flask-swagger-ui = "^4.11.1"
flask-wtf = "^1.1.1"
gevent-websocket = "^0.10.1"
markdown = "^3.4.1"
pydantic = "^1.10.5"
pydub = "^0.25.1"
python-dotenv = "^0.21.1"
requests = "^2.28.2"

[tool.poetry.group.tex.dependencies]
pygments = "^2.16.1"

[tool.poetry.plugins]

[tool.poetry.plugins."console_scripts"]
auth = "auth.__main__:main"
classify = "classification.__main__:main"
leaderboard = "leaderboard.__main__:main"
split-audio = "classification.utils.split_audio:main"

[tool.ruff]
extend-exclude = ["**/doxygen/**/*.py"]
extend-ignore = [
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D106",
  "D107",
  "D203",
  "D205",
  "D212",
  "E501",
]
extend-select = ["B", "C90", "D", "I", "N", "RUF", "UP", "T"]
isort = {known-first-party = ["auth", "classification", "common", "leaderboard"]}
line-length = 88
