[project]
authors = [
  {name = "LELEC210X teaching assistants"},
]
description = "The best project for the best students"
name = "LELEC210X"
readme = "README.md"
requires-python = ">=3.9"
version = "0.1.0"

[tool.ruff]
extend-exclude = ["**/doxygen/**/*.py"]
extend-ignore = [
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D106",
  "D107",
  "D203",
  "D205",
  "D212",
  "E501",
]
extend-select = ["B", "C90", "D", "I", "N", "RUF", "UP", "T"]
isort = {known-first-party = ["auth", "classification", "common", "leaderboard"]}
line-length = 88

[tool.rye]
dev-dependencies = [
  "pre-commit>=3.5.0",
  "pygments>=2.18.0",
  "pytest>=7.4.3",
  "youtube-dl @ git+https://github.com/ytdl-org/youtube-dl.git",
]
managed = true
virtual = true

[tool.rye.workspace]
members = ["auth", "classification", "common", "leaderboard"]
