[dependency-groups]
dev = [
  {include-group = "local-packages"},
  {include-group = "youtube-dl"},
  {include-group = "tests"},
  "pre-commit>=3.5.0",
]
local-packages = [
  "auth",
  "classification",
  "common",
  "contrib[all]",
  "leaderboard",
  "telecom",
]
tests = ["pytest>=7.4.3"]
youtube-dl = ["youtube-dl @ git+https://github.com/ytdl-org/youtube-dl.git"]

[project]
authors = [
  {name = "LELEC210X teaching assistants"},
]
description = "The best project for the best students"
name = "LELEC210X"
readme = "README.md"
requires-python = "==3.10.*"
version = "0.1.0"

[tool.ruff]
extend-exclude = ["**/doxygen/**/*.py", "telecom/sdr/**/python/**/*.py"]
line-length = 88

[tool.ruff.lint]
extend-ignore = [
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D106",
  "D107",
  "D203",
  "D205",
  "D212",
  "E501",
]
extend-select = ["B", "C90", "D", "I", "N", "RUF", "UP", "T"]
isort = {known-first-party = ["auth", "classification", "common", "contrib", "leaderboard", "telecom"]}

[tool.uv.sources]
auth = {workspace = true}
classification = {workspace = true}
common = {workspace = true}
contrib = {workspace = true}
leaderboard = {workspace = true}
telecom = {workspace = true}

[tool.uv.workspace]
members = ["auth", "classification", "common", "contrib", "leaderboard", "telecom"]
