[project]
name = "auth"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Jérome Eertmans", email = "jeertmans@icloud.com" }
]
dependencies = [
    "click>=8.1.7",
    "cryptography>=43.0.0",
    "pyserial>=3.5",
    "pyzmq>=26.2.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pygments>=2.18.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/auth"]
