[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
dependencies = [
  "click>=8.1.7",
  "librosa>=0.10.2.post1",
  "notebook>=7.2.1",
  "scipy>=1.13.1",
  "seaborn>=0.13.2",
  "sounddevice>=0.5.0",
  "soundfile>=0.12.1",
  "tqdm>=4.66.5",
]
name = "classification"
requires-python = ">= 3.9"
version = "0.1.0"

[project.scripts]
classify = "classification.__main__:main"
split-audio = "classification.utils.split_audio:main"

[tool.hatch.build.targets.wheel]
packages = ["src/classification"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.rye]
managed = true
