[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
dependencies = [
  "click>=8.1.7",
  "python-dotenv>=1.0.1",
  "rich>=13.8.0",
]
name = "common"
requires-python = ">= 3.9"
version = "0.1.0"

[tool.hatch.build.targets.wheel]
packages = ["src/common"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.rye]
managed = true
