[project]
name = "contrib"
version = "0.1.0"
description = "Additional packages contributed by students"
readme = "README.md"
authors = [
  {name = "LELEC210X teaching assistants and students"},
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
all = "contrib[uart-reader]"
uart-reader = [
    "click>=8.1.8",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pyqt6>=6.8.1",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "soundfile>=0.13.1",
]

[project.scripts]
uart-reader = "contrib.uart_reader.__main__:main"
model-trainer = "contrib.model_formating_template:main"

[tool.hatch.build.targets.wheel]
packages = [
  "src/contrib",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.rye]
dev-dependencies = ["contrib[all]"]
managed = true

[tool.uv]
dev-dependencies = ["contrib[all]"]
