[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {name = "LELEC210X teaching assistants and students"},
]
dependencies = []
description = "Additional packages contributed by students"
name = "contrib"
readme = "README.md"
requires-python = ">=3.9"
version = "0.1.0"

[project.optional-dependencies]
all = ["contrib[uart-reader]"]
uart-reader = [
  "click>=8.1.8",
  "matplotlib>=3.9.4",
  "numpy>=2.0.2",
  "pyqt6>=6.8.1",
  "scikit-learn>=1.6.1",
  "scipy>=1.13.1",
  "soundfile>=0.13.1",
]

[project.scripts]
model-trainer = "contrib.uart_reader.model_trainer:main"
uart-reader = "contrib.uart_reader.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/contrib"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.rye]
dev-dependencies = ["contrib[all]"]
managed = true
