[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
dependencies = [
  "click>=8.1.7",
  "eventlet==0.33.3",
  "flask>=2.2.2,<3",
  "flask-apscheduler>=1.13.1,<2",
  "flask-limiter>=3.3.0,<4",
  "flask-restx>=1.3.0,<2",
  "flask-socketio>=5.3.6,<6",
  "flask-swagger>=0.2.14",
  "flask-swagger-ui>=4.11.1",
  "flask-wtf>=1.2.1",
  "gevent-websocket>=0.10.1",
  "markdown>=3.7",
  "pydantic>=1.10,<2",
  "pydub>=0.25.1",
  "python-dotenv>=1.0.1",
  "requests>=2.32.3",
]
name = "leaderboard"
readme = "README.md"
requires-python = ">= 3.9"
version = "0.1.0"

[project.scripts]
leaderboard = "leaderboard.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/leaderboard"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.rye]
managed = true
